# Meridian

./: .gitignore
personalsite/: index.html  init-db.js  mongodb_schema.md  package-lock.json  package.json  vite.config.js
personalsite/public/: electron.js
personalsite/src/: App.jsx  main.js  models.js  styles.css  utils.js
personalsite/src-tauri/: Cargo.toml  tauri.conf.json
personalsite/src-tauri/.cargo/: config.toml
personalsite/src-tauri/icons/: icon.icns
personalsite/src-tauri/src/: main.rs
personalsite/src/components/: FocusPage.jsx  GoalsPage.jsx  HabitsPage.jsx  HomePage.jsx  NotesPage.jsx  Sidebar.jsx  StatsPage.jsx  TasksPage.jsx  TopBar.jsx
