[package]
name = "personalsite"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "3.6.0"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
